// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldLine /> should display invalid correctly 1`] = `
<div
  className="field-group is-invalid"
>
  <label
    className="text-right"
    htmlFor="unitInput"
  >
    <FormText
      text="unitLabel"
    />
  </label>
  <div
    className="input-container"
  >
    <div>
      children
    </div>
    <FieldError
      error={null}
      id="unitInput_errors"
      invalid={true}
    />
  </div>
</div>
`;

exports[`<FieldLine /> should render without crashing 1`] = `
<div
  className="field-group"
>
  <label
    className="text-right"
    htmlFor="unitInput"
  >
    <FormText
      text="unitLabel"
    />
  </label>
  <div
    className="input-container"
  >
    <div>
      children
    </div>
    <FieldError
      error={null}
      id="unitInput_errors"
      invalid={false}
    />
  </div>
</div>
`;

exports[`<FieldLine /> should show a required marker 1`] = `
<div
  className="field-group is-invalid"
>
  <label
    className="text-right"
    htmlFor="unitInput"
  >
    <FormText
      text="unitLabel"
    />
    <span
      className="field-required"
    >
       *
    </span>
  </label>
  <div
    className="input-container"
  >
    <div>
      children
    </div>
    <FieldError
      error={null}
      id="unitInput_errors"
      invalid={true}
    />
  </div>
</div>
`;
